@@ -224,6 +224,7 @@ void TrackSettingsModel::setInstrumentData(const Instrument & instrument)
     setDelay(static_cast<int>(instrument.settings().timing.delay.count()));
 
     setVelocityJitter(instrument.settings().midiEffects.velocityJitter);
+    setVelocityKeyTrack(instrument.settings().midiEffects.velocityKeyTrack);
 
     m_midiCcModel->setMidiCcSettings(instrument.settings().midiCcSettings);
 
@@ -285,6 +286,7 @@ TrackSettingsModel::InstrumentU TrackSettingsModel::toInstrument() const
     }
 
     settings.midiEffects.velocityJitter = m_midiEffectSettings.velocityJitter;
+    settings.midiEffects.velocityKeyTrack = m_midiEffectSettings.velocityKeyTrack;
 
     settings.midiCcSettings = m_midiCcModel->midiCcSettings();
     instrument->setSettings(settings);
@@ -414,6 +416,21 @@ void TrackSettingsModel::setVelocityJitter(int velocityJitter)
     if (m_midiEffectSettings.velocityJitter != velocityJitter) {
         m_midiEffectSettings.velocityJitter = velocityJitter;
         emit velocityJitterChanged();
+    }
+}
+
+int TrackSettingsModel::velocityKeyTrack() const
+{
+    return m_midiEffectSettings.velocityKeyTrack;
+}
+
+void TrackSettingsModel::setVelocityKeyTrack(int velocityKeyTrack)
+{
+    juzzlin::L(TAG).debug() << "Setting velocty key track to " << velocityKeyTrack;
+
+    if (m_midiEffectSettings.velocityKeyTrack != velocityKeyTrack) {
+        m_midiEffectSettings.velocityKeyTrack = velocityKeyTrack;
+        emit velocityKeyTrackChanged();
     }
 }
 
